add mawinter-api DEL newendpoint
